Fix z-index of topbar

--- a/html/scss/overrides/_top_bar_override.scss
+++ b/html/scss/overrides/_top_bar_override.scss
@@ -10,6 +10,7 @@
       border-bottom: 1px solid #e1e1e1;
       width: 100%;
       position: fixed;
+			z-index: 2;
 
       .primary-nav {
         background-color: $white;
